--- a/client/src/styles/_framework.scss
+++ b/client/src/styles/_framework.scss
@@ -5,7 +5,7 @@
   position: relative;
   &.full {
     width: 100%;
-    height: 50vh;
+    height: 52vh;
   }
   &.large1 {
     width: 70%;
@@ -26,6 +26,22 @@
   &.even3 {
     width: 30%;
     height: 8rem;
+  }
+}
+@media (max-width:30em) {
+  .frame {
+    &.full {
+      width: 100%;
+      height: 46vh;
+    }
+  }
+}
+@media (width:1024px), (height:1366px) {
+  .frame {
+    &.full {
+      width: 100%;
+      height: 25vh;
+    }
   }
 }
 
